--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-day-picker": "^9.11.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.63.0",
+    "recharts": "^3.2.1",
     "sonner": "^2.0.7",
     "stripe": "^18.5.0",
     "tailwind-merge": "^3.3.1",
